--- a/styles.css
+++ b/styles.css
@@ -22,16 +22,111 @@
     font-style: italic;
   }
 
-  h1 {
-    padding-left: 20px;
+  .glegoo-regular {
+    font-family: "Glegoo", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .glegoo-bold {
+    font-family: "Glegoo", serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+
+
+
+  .header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 50px;
+
+  }
+
+  .navbar {
+    margin-top: 11px;
+    margin-right: 50px;
   }
 
   #html-link, #css-link {
+    display: inline;
     font-family: "Anonymous Pro", monospace;
     font-weight: 400;
-    font-style: normal;
-    color: black;
+    font-style: normal;;
     padding: 10px 20px;
     border: 1px;
+    width: 40px;
+    text-align: center;
     border-color: black;
+    border-style: solid;
+    margin-right: 20px;
+    border-radius: 7px;
+  }
+
+
+  li {
+    list-style-type: none;
+  }
+
+  a:link {
+    color: black;
+    text-decoration: none;
+  }
+
+  a:active {
+    color: #000;
+  }
+
+  .navbar-button:hover {
+    background-color: bisque;
+  }
+
+  .navbar-button:active {
+    background-color: silver;
+  }
+
+  .hero {
+    display: flex;
+    margin-top: 20px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-bottom: 20px;
+    flex-direction: column;
+    background-color: rgba(243, 243, 243, 1);
+    border-radius: 30px;
+  }
+
+  p {
+    font-family: "Glegoo", serif;
+    font-weight: 400;
+    font-style: normal;
+    letter-spacing: 0.7px;
+  }
+
+  .container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .left-container {
+    display: flex;
+    flex-direction: column;
+    margin: 50px;
+    width: 50%;
+  }
+
+  .right-container {
+    display: flex;
+    flex-direction: column;
+    margin: 50px;
+    width: 50%;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-left: 50px;
+    margin-right: 50px;
   }
