--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,8 @@
     flex-direction: column;
     margin: 50px;
     width: 50%;
+    background-image: url(/assets/einstain.png);
+    background-repeat: no-repeat;
   }
 
   .footer {
