--- a/styles.css
+++ b/styles.css
@@ -117,12 +117,15 @@
   }
 
   .right-container {
-    display: flex;
-    flex-direction: column;
-    margin: 50px;
     width: 50%;
     background-image: url(/assets/einstain.png);
+    background-position: bottom right;
     background-repeat: no-repeat;
+    border-radius: 30px;
+  }
+
+  .text-right-container {
+    margin: 50px;
   }
 
   .footer {
