--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
-body {
+/* body {
   width: 85%;
   margin: auto;
-}
+} */
 
 .anonymous-pro-regular {
     font-family: "Anonymous Pro", monospace;
@@ -39,6 +39,24 @@ body {
     font-style: normal;
   }
 
+  h1 {
+    font-family: "Anonymous Pro", monospace;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+@keyframes typing {
+    from { width: 0 }
+    to { width: 100% }
+}
+
+@keyframes blink-caret {
+    from, to { border-color: transparent }
+    50% { border-color: black }
+}
+
 
 
   .header {
@@ -69,7 +87,6 @@ body {
     margin-right: 20px;
     border-radius: 7px;
   }
-
 
   li {
     list-style-type: none;
@@ -143,6 +160,7 @@ body {
     background-color: rgba(241, 210, 86, 1);
     margin-bottom: 15px;
     border-radius: 30px;
+    z-index: 2;
   }
 
   .css-container {
@@ -217,4 +235,16 @@ body {
   .image {
     align-items: center;
 
+  }
+
+  .html-container:hover {
+    background-color: rgba(251, 215, 71, 1);
+    transition-timing-function: ease-out;
+    transition-duration: 0.5s;
+  }
+
+  .html-container, .css-container {
+    transition-timing-function: ease-out;
+    transition-duration: 0.5s;
+    cursor: pointer;
   }
